# study_data

./: README.md
01_PythonAnaliseDeDados/: Dockerfile  docker-compose.yml
01_PythonAnaliseDeDados/src/: analysis.ipynb
02_FundamentosDaDescobertaDeDados/src/: analysis.ipynb
02_FundamentosDaDescobertaDeDados/src/py_analyses.egg-info/: PKG-INFO
03_PreModelagem01/: pyproject.toml
03_PreModelagem01/src/: Profissao Cientista de Dados M14 Pratique.ipynb
03_PreModelagem01/src/py_analyses.egg-info/: SOURCES.txt  requires.txt
datacamp/courses/introduction-to-python/: 1_python_basics.ipynb  python-basics.ipynb
